--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,9 @@ flutter:
     - images/cats/jeans.png
     - images/cats/accessories.png
     - images/products/blazer1.jpeg
+    - images/products/blazer2.jpeg
     - images/products/dress1.jpeg
+    - images/products/dress2.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
